objects/AdditionalOpportunityFields__c.object
<CustomObject>
    <description>SFDC1-6937:  This custom object is needed to hold fields for the Opportunity.</description>
    <fields>
        <fullName>AccountType__c</fullName>
        <description>SFDC1-6937: Field to hold Account Type</description>
        <inlineHelpText>Please select the Account Type</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buyside/ End User</fullName>
                </value>
                <value>
                    <fullName>Dealer / Bank</fullName>
                </value>
                <value>
                    <fullName>IDB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checkcompanywebsite__c</fullName>
        <description>SFDC1-6937: This field holds the value for Check company website</description>
        <inlineHelpText>Please enter the Check company website</inlineHelpText>
        <label>Check company website</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompetitorIncumbent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC - SFDC-3297 - IPREO (Core) Additional Opportunity Field Competitor / Incumbent Account lookup</description>
        <inlineHelpText>Please populate the name of Competitor</inlineHelpText>
        <label>Competitor / Incumbent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Additional Opportunity Fields</relationshipLabel>
        <relationshipName>Additional_Opportunity_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConfirmationofLegalEntityName__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6937: Field to hold Confirmation of Legal Entity Name</description>
        <inlineHelpText>Check if you have confirmation of Legal Entity Name</inlineHelpText>
        <label>Confirmation of Legal Entity Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConfirmationofOperationLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6937: Field to hold Confirmation of Operation Location</description>
        <inlineHelpText>Check if you have confirmation of Operation Location</inlineHelpText>
        <label>Confirmation of Operation Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmationofidentityofrequestor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6937: Field to holds Confirmation of identity of requestor</description>
        <inlineHelpText>Select if you have confirmation of identity of requester</inlineHelpText>
        <label>Confirmation of identity of requestor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmationofidentityoftwocontacts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6937: Field to hold Confirmation of identity of two contacts</description>
        <inlineHelpText>Check if you have confirmation of identity of two contacts</inlineHelpText>
        <label>Confirmation of identity of two contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DealType__c</fullName>
        <description>SFDC1-6937: Field to hold Deal Type</description>
        <inlineHelpText>Select the Deal type</inlineHelpText>
        <label>Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Existing client</fullName>
                </value>
                <value>
                    <fullName>New client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DesignOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6937: Field to hold if Oppty is Design only</description>
        <inlineHelpText>Select if Design Only</inlineHelpText>
        <label>Design Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DevelopmentFee__c</fullName>
        <description>SFDC1-6937: Field to hold Development Fee</description>
        <inlineHelpText>Please enter the Development Fee</inlineHelpText>
        <label>Development Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedContractRevenue__c</fullName>
        <description>SFDC1-6937: Field to hold Estimated Contract Revenue</description>
        <inlineHelpText>Please enter the Estimated Contract Revenue</inlineHelpText>
        <label>Estimated Contract Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GMGClientTier__c</fullName>
        <description>SFDC-3487: GMG Client Tier Field on &quot;Additional Opportunity Fields&quot;</description>
        <label>GMG Client Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Keycontactemailreflectscompanyid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6937: Field to hold value for Key contact email reflects company Identity</description>
        <inlineHelpText>Check if Key contact email reflects company Id</inlineHelpText>
        <label>Key contact email reflects company Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LaunchDate__c</fullName>
        <description>SFDC1-6937: Field to hold Launch Date</description>
        <inlineHelpText>Please enter the Launch Date</inlineHelpText>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launched__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6937: Field to hold Launched value - true or false</description>
        <inlineHelpText>Select if Launched</inlineHelpText>
        <label>Launched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadGenTeam__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6937: Lead Gen Team</description>
        <inlineHelpText>Check if lead Gen Team</inlineHelpText>
        <label>Lead Gen Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>Legacy Id field for Additional Opportunity fields. It will be same as parent opportunity. Create as part of migration exercise</description>
        <externalId>true</externalId>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>Legacy Id field for Additional Opportunity fields. It will be same as parent opportunity. Create as part of migration exercise</description>
        <externalId>true</externalId>
        <inlineHelpText>Populated from legacy system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MRUltimateClientContact__c</fullName>
        <description>SFDC-1812 Contains the Client contact for OEM customers.</description>
        <label>MR Ultimate Client Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRUltimateClient__c</fullName>
        <description>SFDC-1812 contains information for OEM customers</description>
        <label>MR Ultimate Client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSFAIntermediateSegment__c</fullName>
        <description>SFDC1-6937: Field to hold MSFA Intermediate Segment</description>
        <inlineHelpText>Please select the MSFA Intermediate Segment</inlineHelpText>
        <label>MSFA Intermediate Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Cash Trading</fullName>
                </value>
                <value>
                    <fullName>Delta One</fullName>
                </value>
                <value>
                    <fullName>Equity Long/Short</fullName>
                </value>
                <value>
                    <fullName>Fixed Income</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>M&amp;A</fullName>
                </value>
                <value>
                    <fullName>Prop Desk</fullName>
                </value>
                <value>
                    <fullName>Risk Desk</fullName>
                </value>
                <value>
                    <fullName>Syndicates Desk</fullName>
                </value>
                <value>
                    <fullName>Trading Desk</fullName>
                </value>
                <value>
                    <fullName>UK Investment Trust Desk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSFTrialEndDate__c</fullName>
        <description>SFDC1-6937: Field to hold MSF Trial End Date</description>
        <inlineHelpText>Please enter the MSF Trial End Date</inlineHelpText>
        <label>MSF Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSFTrialLength1__c</fullName>
        <description>SFDC-230 Converting existing number field to formula field. Formula is based on the legacy field</description>
        <formula>IF(ISPICKVAL(MSFTrialStatus__c,&apos;Inactive Trial&apos;),
 MSFTrialEndDate__c -  MSFTrialStartDate__c ,
 TODAY() -  MSFTrialStartDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto calculated field based on trial start date and end date</inlineHelpText>
        <label>MSF Trial Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSFTrialProduct__c</fullName>
        <description>SFDC1-6937: Field to hold MSF Trial Product</description>
        <inlineHelpText>Please select the MSF Trial Product</inlineHelpText>
        <label>MSF Trial Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Manager Toolkit</fullName>
                </value>
                <value>
                    <fullName>Aggregated Corporate Bond Datafeed</fullName>
                </value>
                <value>
                    <fullName>Benchmarking Data</fullName>
                </value>
                <value>
                    <fullName>Bloomberg</fullName>
                </value>
                <value>
                    <fullName>Broker Intelligence</fullName>
                </value>
                <value>
                    <fullName>Buyside Analytics Datafeed</fullName>
                </value>
                <value>
                    <fullName>Buyside Datafeed</fullName>
                </value>
                <value>
                    <fullName>Buyside Toolkit for Excel</fullName>
                </value>
                <value>
                    <fullName>Buyside Trans Datafeed</fullName>
                </value>
                <value>
                    <fullName>Capital IQ</fullName>
                </value>
                <value>
                    <fullName>Capital IQ Xpressfeed</fullName>
                </value>
                <value>
                    <fullName>Credit Benchmark Analytics Datafeed (CBAD)</fullName>
                </value>
                <value>
                    <fullName>Credit Consensus</fullName>
                </value>
                <value>
                    <fullName>Data Insight Feed</fullName>
                </value>
                <value>
                    <fullName>Deltix</fullName>
                </value>
                <value>
                    <fullName>Direct Edge</fullName>
                </value>
                <value>
                    <fullName>DX Open</fullName>
                </value>
                <value>
                    <fullName>Evaluation Explorer</fullName>
                </value>
                <value>
                    <fullName>Eze Locates</fullName>
                </value>
                <value>
                    <fullName>FactSet</fullName>
                </value>
                <value>
                    <fullName>International Index Explorer</fullName>
                </value>
                <value>
                    <fullName>iPhone App</fullName>
                </value>
                <value>
                    <fullName>Japan Buyside Analytics JPX</fullName>
                </value>
                <value>
                    <fullName>Performance Explorer</fullName>
                </value>
                <value>
                    <fullName>Performance Explorer Prop Borrower</fullName>
                </value>
                <value>
                    <fullName>Public Disclosure Datafeed</fullName>
                </value>
                <value>
                    <fullName>Repo Datafeed</fullName>
                </value>
                <value>
                    <fullName>Research Signals Short Squeeze Data</fullName>
                </value>
                <value>
                    <fullName>Risk Explorer</fullName>
                </value>
                <value>
                    <fullName>Secfin Trans Datafeed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSFTrialStartDate__c</fullName>
        <description>SFDC1-6937: Field to hold MSF Trial Start Date</description>
        <inlineHelpText>Please enter the MSF Trial Start Date</inlineHelpText>
        <label>MSF Trial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSFTrialStatus__c</fullName>
        <description>SFDC1-6937: Field to hold MSF Trial Status</description>
        <inlineHelpText>Please select the MSF Trial Status</inlineHelpText>
        <label>MSF Trial Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active Trial</fullName>
                </value>
                <value>
                    <fullName>Inactive Trial</fullName>
                </value>
                <value>
                    <fullName>Trial Reactivated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSFTrial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6937: Field to hold MSF Trial</description>
        <inlineHelpText>Select if MSF Trial</inlineHelpText>
        <label>MSF Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MoDOpportunityType__c</fullName>
        <description>SFDC1-6937: Field to hold MoD Opportunity Type</description>
        <inlineHelpText>Select the MoD Opportunity Type</inlineHelpText>
        <label>MoD Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adhesion</fullName>
                </value>
                <value>
                    <fullName>Core Business</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MonthlyHostingFee__c</fullName>
        <description>SFDC1-6937: Field to hold Monthly Hosting Fee</description>
        <inlineHelpText>Please enter the Monthly Hosting Fee</inlineHelpText>
        <label>Monthly Hosting Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NYSENonSubsidizedContractValue__c</fullName>
        <description>SFDC-3275: Field to hold NYSE Non-Subsidized Contract Value</description>
        <label>NYSE Non-Subsidized Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NYSEProgramTier__c</fullName>
        <description>SFDC-3275: Field to hold NYSE Program Tier</description>
        <label>NYSE Program Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier A</fullName>
                </value>
                <value>
                    <fullName>Tier B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityReference__c</fullName>
        <description>SFDC1-6937 This field will link back this Additional Opportunity Fields to the Opportunity its associated.</description>
        <inlineHelpText>Please select the Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Additional Opportunity Fields</relationshipLabel>
        <relationshipName>AdditionalOpportunityFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>SFDC1-6937: Field to hold Platform</description>
        <inlineHelpText>Please select the Platform</inlineHelpText>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DS Match</fullName>
                </value>
                <value>
                    <fullName>MarkitWire</fullName>
                </value>
                <value>
                    <fullName>MTM</fullName>
                </value>
                <value>
                    <fullName>MTM/MW</fullName>
                </value>
                <value>
                    <fullName>DS Match &amp; MarkitWire</fullName>
                </value>
                <value>
                    <fullName>DSM FX OES</fullName>
                </value>
                <value>
                    <fullName>DSM/MTM FX OES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectManager__c</fullName>
        <description>SFDC1-6937: Field to hold Project Manager</description>
        <inlineHelpText>Please select the Project Manager</inlineHelpText>
        <label>Project Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adam Reke</fullName>
                </value>
                <value>
                    <fullName>Adrienne Watral</fullName>
                </value>
                <value>
                    <fullName>Alexander Carroll</fullName>
                </value>
                <value>
                    <fullName>Alfred Christiansen</fullName>
                </value>
                <value>
                    <fullName>Alisha Idrees</fullName>
                </value>
                <value>
                    <fullName>Andres Esguerra</fullName>
                </value>
                <value>
                    <fullName>Andrew Bell</fullName>
                </value>
                <value>
                    <fullName>Andrew Robinson</fullName>
                </value>
                <value>
                    <fullName>Angela Chase</fullName>
                </value>
                <value>
                    <fullName>April Capil</fullName>
                </value>
                <value>
                    <fullName>Ashley Hammond</fullName>
                </value>
                <value>
                    <fullName>Austin Cannell</fullName>
                </value>
                <value>
                    <fullName>Benjamin Nelson</fullName>
                </value>
                <value>
                    <fullName>Brian Yarosh</fullName>
                </value>
                <value>
                    <fullName>Casey Katona</fullName>
                </value>
                <value>
                    <fullName>Charles Gruber</fullName>
                </value>
                <value>
                    <fullName>Cherilyn Rasmussen</fullName>
                </value>
                <value>
                    <fullName>Chin Eng Soon</fullName>
                </value>
                <value>
                    <fullName>Christopher Ormsby</fullName>
                </value>
                <value>
                    <fullName>Christopher Robinson</fullName>
                </value>
                <value>
                    <fullName>Chris Watson</fullName>
                </value>
                <value>
                    <fullName>Clinton Randall</fullName>
                </value>
                <value>
                    <fullName>Craig Draayer</fullName>
                </value>
                <value>
                    <fullName>Daniel Vincent</fullName>
                </value>
                <value>
                    <fullName>David Griesbauer</fullName>
                </value>
                <value>
                    <fullName>Elizabeth Burgess</fullName>
                </value>
                <value>
                    <fullName>Francesco Maffei</fullName>
                </value>
                <value>
                    <fullName>Gabriel Helgerson</fullName>
                </value>
                <value>
                    <fullName>Gary Zandstra</fullName>
                </value>
                <value>
                    <fullName>Giorgianna Seibt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectStartDate__c</fullName>
        <description>SFDC1-6937: Field to hold Project Start Date</description>
        <inlineHelpText>Please enter the Project Start Date</inlineHelpText>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>SFDC1-6937: Field to hold Region</description>
        <inlineHelpText>Please select the Region</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Non-Japan Asia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResourceID__c</fullName>
        <description>SFDC1-6937: Field to hold Resource ID</description>
        <inlineHelpText>Please enter the Resource ID</inlineHelpText>
        <label>Resource ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortDescription__c</fullName>
        <description>SFDC1-6937: Field to hold Short Description</description>
        <inlineHelpText>Please enter a Short Description</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TSXTier__c</fullName>
        <description>SFDC-3275: Field to hold TSX Tier</description>
        <label>TSX Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Venture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Additional Opportunity Fields</label>
    <nameField>
        <label>Additional Opportunity Fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Opportunity Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>